# Phoenix_lite_1

./: .gitignore  README.md  config.yaml  pyproject.toml
data/gesture/: NO_1766320067578.npz  NO_1766320070097.npz  NO_1766320073470.npz  NO_1766320076756.npz  NO_1766320078599.npz  NO_1766320080564.npz  NO_1766320081959.npz  NO_1766320084125.npz  NO_1766320085222.npz  NO_1766320086666.npz  NO_1766320087799.npz  NO_1766320089235.npz  NO_1766320090322.npz  NO_1766320091341.npz  NO_1766320092863.npz  NO_1766320094501.npz  NO_1766320095766.npz  NO_1766320096845.npz  NO_1766320097856.npz  NO_1766320098792.npz  NO_1766320099755.npz  NO_1766320101303.npz  NO_1766320120235.npz  NO_1766320122365.npz  NO_1766320123667.npz  NO_1766320125743.npz  NO_1766320135416.npz  NO_1766320136962.npz  NO_1766320138574.npz  NO_1766320140171.npz  NO_1766320141464.npz  NO_1766320142465.npz  NO_1766320149130.npz  NO_1766320150123.npz  NO_1766320151383.npz  NO_1766320155357.npz  NO_1766320157165.npz  NO_1766320158402.npz  NO_1766320159356.npz  NO_1766320160262.npz  (+50 more)
src/phoenixlit/: __init__.py  auth.py  cli.py  collectors.py  config.py  face.py  features.py  gesture.py  hands.py  ml_models.py  overlay.py  runtime.py  sessionlog.py  trainers.py  tts.py
